Added a semifunctional code-block.html to components and updated all of the corresponding files

--- a/app/elements/learn/elements.html
+++ b/app/elements/learn/elements.html
@@ -8,3 +8,4 @@
 <link rel="import" href="lesson-ref.html">
 <link rel="import" href="narrative-text.html">
 <link rel="import" href="link-ref.html">
+<link rel="import" href="code-block.html">
