--- a/app/lesson.html
+++ b/app/lesson.html
@@ -77,6 +77,22 @@
           <p>HTML is the backbone of the web, and the beginning of any website. To break that down: “Hypertext” means the document contains text that has links to other text, like stylesheets or scripts, for example. “Markup Language” is a way of formatting a file so that it distinguishes between content and structure—it “marks up” the text to make it easy for the browser to tell which words it should display on the screen, vs. those that are there to tell it how to structure the page.</p>
         </info-block>
 			</step-block>
+			<step-block title="Get ready for style: Create a CSS Document">
+				<p>Create a new file and save it as "style.css" in the same folder as your index.html file.</p>
+			</step-block>
+			<step-block title="Hook it up your HTML">
+				<p>To tell your site where it can find your stylesheet, link to it in your <head>. </p>
+				<code-block>
+					 <!-- &lt;head&gt;
+						&lt;link rel='stylesheet' href='styles.css'&gt;
+					&lt;/head&gt; -->
+					public:
+  // Voila
+  static const string VOILA = "Voila";
+
+  // will not interfere with embedded &lt;a href="#voila2"&gt;tags&lt;/a&gt;.
+				</code-block>
+			</step-block>
 		</div>
 	</body>
 </html>
