--- a/app/elements/learn/step-block.html
+++ b/app/elements/learn/step-block.html
@@ -75,11 +75,7 @@ Example:
 				<content></content>
 
 			</paper-material>
-			<!-- <div class="question">
-				<h4>Questions</h4>
-				<p>Do I have to pay a hosting server?</p>
-				<p>Yes, of course you do.</p>
-			</div> -->
+			<!-- Put questions here! -->
 		</content-wrapper>
 	</template>
 </dom-module>
