--- a/app/lesson.html
+++ b/app/lesson.html
@@ -6,7 +6,7 @@
 
 		<script src="bower_components/webcomponentsjs/webcomponents-lite.min.js">
 		</script>
-		<link rel="import" href="elements/learn-components.html">
+		<link rel="import" href="elements/elements.html">
 	</head>
 
 	<body class="fullbleed">
