--- a/app/elements/learn/zooming-image.html
+++ b/app/elements/learn/zooming-image.html
@@ -1,156 +1,240 @@
 <dom-module id="zooming-image">
-  <style>
-  ::content #zooming-image {
-    position: relative;
-  };
+	<style>
+		::content #zooming-image {
+			position: relative;
+		}
+		
+		;
+		::content #zooming-image-tag {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 313px;
+			height: 200px;
+			z-index: 10;
+		}
+		
+		;
+		::content #fullsize {
+			/* also set display:none using style attribute so the to-small 
+		 * doesn't happen on page load
+		*/
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 0px;
+			height: 0px;
+			z-index: 20;
+			/*
+			animation: to-small-size 1s ease-out running;
+			--webkit-animation: to-small-size 1s ease-out running;
+			*/
+			-webkit-transition+: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			   -moz-transition+: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			     -o-transition+: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			        transition+: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
 
-  ::content #zooming-image-tag {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 313px;
-    height: 200px;
-    z-index: 10;
-  };
-
-  ::content #fullsize { 
-    /* also set display:none using style attribute so the to-small 
-     * doesn't happen on page load
-    */
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0px;
-    height: 0px;
-    z-index: 20;
-    animation: to-small-size 1s ease-out running;
-    --webkit-animation: to-small-size 1s ease-out running;
-  };
-
-  ::content #fullsize.zoomed {
-      display: inline;
-      width: auto;
-      height: auto;
-      animation: to-full-size 1s ease-out  running;
-      --webkit-animation: to-full-size 1s ease-out  running;
-  }
+			-webkit-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			   -moz-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			     -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			        transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
 
 
-  /* Chrome, Safari, Opera */ 
-  @-webkit-keyframes to-full-size {
-      0%   {width: 0; height: 0;}
-      25%  {width: 25%; height: 25%;}
-      50%  {width: 50%; height: 50%;}
-      75%  {width: 75%; height: 75%;}
-      100% {width: 100%; height: 100%;}
-  } 
+		}
+		
+		;
+		::content #fullsize.zoomed {
+			display: block;
+			width: 100px;
+			height: 100px;
+			/*
+			animation: to-full-size 1s ease-out running;
+			--webkit-animation: to-full-size 1s ease-out running;
+			*/
+			-webkit-transition+: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+				   -moz-transition+: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+				     -o-transition+: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+				        transition+: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
 
-  /* Standard syntax */ 
-  @keyframes to-full-size {
-      0%   {width: 0; height: 0;}
-      25%  {width: 25%; height: 25%;}
-      50%  {width: 50%; height: 50%;}
-      75%  {width: 75%; height: 75%;}
-      100% {width: 100%; height: 100%;}
-  }
-
-  /* Chrome, Safari, Opera */ 
-  @-webkit-keyframes to-small-size {
-      0%   {width: 100%; height: 100%;}
-      25%  {width: 75%; height: 75%;}
-      50%  {width: 50%; height: 50%;}
-      75%  {width: 25%; height: 25%;}
-      100% {width: 0; height: 0;}
-  } 
-
-  /* Standard syntax */ 
-  @keyframes to-small-size {
-      0%   {width: 100%; height: 100%;}
-      25%  {width: 75%; height: 75%;}
-      50%  {width: 50%; height: 50%;}
-      75%  {width: 25%; height: 25%;}
-      100% {width: 0; height: 0;}
-  }
-
-  </style>
-  <template>
-    <div id="zooming-image">
-      <img id='thumbnail' src="{{ src }}">
-      <img id='fullsize' style="display: none;">
-      <paper-icon-button icon="zoom-in" on-click="_handleButtonClick" style="position:absolute;z-index:11;right:0;bottom:0; color: white"></paper-icon-button>
-    </div>
-  </template>
+			-webkit-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			   -moz-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			     -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			        transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+		}
+		/* Chrome, Safari, Opera */
+		
+		@-webkit-keyframes to-full-size {
+			0% {
+				width: 0;
+				height: 0;
+			}
+			25% {
+				width: 25%;
+				height: 25%;
+			}
+			50% {
+				width: 50%;
+				height: 50%;
+			}
+			75% {
+				width: 75%;
+				height: 75%;
+			}
+			100% {
+				width: 100%;
+				height: 100%;
+			}
+		}
+		/* Standard syntax */
+		
+		@keyframes to-full-size {
+			0% {
+				width: 0;
+				height: 0;
+			}
+			25% {
+				width: 25%;
+				height: 25%;
+			}
+			50% {
+				width: 50%;
+				height: 50%;
+			}
+			75% {
+				width: 75%;
+				height: 75%;
+			}
+			100% {
+				width: 100%;
+				height: 100%;
+			}
+		}
+		/* Chrome, Safari, Opera */
+		
+		@-webkit-keyframes to-small-size {
+			0% {
+				width: 100%;
+				height: 100%;
+			}
+			25% {
+				width: 75%;
+				height: 75%;
+			}
+			50% {
+				width: 50%;
+				height: 50%;
+			}
+			75% {
+				width: 25%;
+				height: 25%;
+			}
+			100% {
+				width: 0;
+				height: 0;
+			}
+		}
+		/* Standard syntax */
+		
+		@keyframes to-small-size {
+			0% {
+				width: 100%;
+				height: 100%;
+			}
+			25% {
+				width: 75%;
+				height: 75%;
+			}
+			50% {
+				width: 50%;
+				height: 50%;
+			}
+			75% {
+				width: 25%;
+				height: 25%;
+			}
+			100% {
+				width: 0;
+				height: 0;
+			}
+		}
+	</style>
+	<template>
+		<div id="zooming-image">
+			<img id='thumbnail' src="{{ src }}">
+			<img id='fullsize' style="display: none;">
+			<paper-icon-button icon="zoom-in" on-click="_handleButtonClick" style="position:absolute;z-index:11;right:8px;bottom:8px; color: white"></paper-icon-button>
+		</div>
+	</template>
 </dom-module>
 <script>
-  Polymer({
-    is: 'zooming-image',
-    behaviors: [Polymer.IronA11yKeysBehavior],
-    listeners: {
-      "click": "_clickListener"
-    },
-    keyBindings: {
-      'esc': '_handleEscapeKey'
-    },
-    /* Using IronA11yKeysBehavior, listen for 'esc' key pressed
-     * anywhere on the page (see keyEventTarget property). 
-     * escape will hide a zoomed image.
-     */
-    _handleEscapeKey: function(e) {
-      this.zoomed = false;
-    },
-    /* Support users clicking on the small image to get the big one,
-     * and the big one to hide it and go back to the small one.
-     */
-    _clickListener: function(e) {
-      this.zoomed = (e.target.id == 'thumbnail');
-    },
-    _handleButtonClick: function(e) {
-      this.zoomed = true;
-      e.stopPropagation();
-    },
-    _showFullSized: function() {
-      var zoomed = (this.id == 'fullsize') ? this : this.$['fullsize'];
-      zoomed.style.display = "inherit";
-      if (zoomed.src) {
-        zoomed.classList.add('zoomed');
-      } else { // lazy load big images
-        var self = this;
-        zoomed.onload = this._showFullSized;
-        zoomed.src = this.fullSrc;
-      }
-    },
-    _hideFullSized: function() {
-      var zoomed = (this.id == 'fullsize') ? this : this.$['fullsize'];
-      zoomed.classList.remove('zoomed');
-    },
-    _zoomedObserver: function() {
-      if (this.zoomed) {
-        this._showFullSized()
-      } else {
-        this._hideFullSized();
-      }
-    },
-    properties: {
-      src: {
-          type: String,
-          value: ""
-      },
-      fullSrc: {
-          type: String,
-          value: ""
-      },
-      zoomed: {
-        type: Boolean,
-        value: false,
-        observer: '_zoomedObserver'
-      },
-      keyEventTarget: { // IronA11yKeysBehavior - listen for esc anywhere on page
-        type: Object,
-        value: function() {
-          return document.body;
-        }
-      }
-    }
-  });
+	Polymer({
+		is: 'zooming-image',
+		behaviors: [Polymer.IronA11yKeysBehavior],
+		listeners: {
+			"click": "_clickListener"
+		},
+		keyBindings: {
+			'esc': '_handleEscapeKey'
+		},
+		/* Using IronA11yKeysBehavior, listen for 'esc' key pressed
+		 * anywhere on the page (see keyEventTarget property). 
+		 * escape will hide a zoomed image.
+		 */
+		_handleEscapeKey: function(e) {
+			this.zoomed = false;
+		},
+		/* Support users clicking on the small image to get the big one,
+		 * and the big one to hide it and go back to the small one.
+		 */
+		_clickListener: function(e) {
+			this.zoomed = (e.target.id == 'thumbnail');
+		},
+		_handleButtonClick: function(e) {
+			this.zoomed = true;
+			e.stopPropagation();
+		},
+		_showFullSized: function() {
+			var zoomed = (this.id == 'fullsize') ? this : this.$['fullsize'];
+			zoomed.style.display = "block";
+			if (zoomed.src) {
+				zoomed.classList.add('zoomed');
+			} else { // lazy load big images
+				var self = this;
+				zoomed.onload = this._showFullSized;
+				zoomed.src = this.fullSrc;
+			}
+		},
+		_hideFullSized: function() {
+			var zoomed = (this.id == 'fullsize') ? this : this.$['fullsize'];
+			zoomed.classList.remove('zoomed');
+		},
+		_zoomedObserver: function() {
+			if (this.zoomed) {
+				this._showFullSized()
+			} else {
+				this._hideFullSized();
+			}
+		},
+		properties: {
+			src: {
+				type: String,
+				value: ""
+			},
+			fullSrc: {
+				type: String,
+				value: ""
+			},
+			zoomed: {
+				type: Boolean,
+				value: false,
+				observer: '_zoomedObserver'
+			},
+			keyEventTarget: { // IronA11yKeysBehavior - listen for esc anywhere on page
+				type: Object,
+				value: function() {
+					return document.body;
+				}
+			}
+		}
+	});
 </script>
-
