--- a/app/elements/learn/zooming-image.html
+++ b/app/elements/learn/zooming-image.html
@@ -17,6 +17,22 @@
 
 		::content #zoom-image-container {
 			position: relative;
+			top:0;
+			left:0;
+			background-color:#000;
+			-webkit-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			   -moz-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			     -o-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			        transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+
+			-webkit-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			   -moz-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			     -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			        transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+		};
+
+		::content #zoom-image-container.container-zoomed {
+			position: absolute;
 		};
 
 		::content #zoom-image-background {
@@ -27,19 +43,26 @@
 			top:0;
 			left:0;
 
-			-webkit-transition: opacity 5000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			   -moz-transition: opacity 5000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			     -o-transition: opacity 5000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			        transition: opacity 5000ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+			opacity:0;
+			display:none;
+		}
+
+		::content #zoom-image-background, ::content #fullsize, ::content #zoom-image-container {
+/*			-webkit-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			   -moz-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			     -o-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			        transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
 
 			-webkit-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
 			   -moz-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
 			     -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			        transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+			        transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);*/
+		};
 
-			opacity:0;
-			display:none;
-		}
+		::content #thumbnail {
+			width: 100%;
+
+		};
 
 		::content #fullsize {
 			/* also set display:none using style attribute so the to-small 
@@ -48,54 +71,21 @@
 			position: absolute;
 			top: 0;
 			left: 0;
-			width: 0px;
-			height: 0px;
+			width: 100%;
 			z-index: 20;
 			overflow:hidden;
-			/*
-			animation: to-small-size 1s ease-out running;
-			--webkit-animation: to-small-size 1s ease-out running;
-			*/
-			-webkit-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			   -moz-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			     -o-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			        transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-
-			-webkit-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			   -moz-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			     -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			        transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+			display: none;
+		};
 
 
-		}
-		
-		;
-		::content #fullsize.zoomed {
-			display: block;
-			width: 800px;
-			height: 800px;
-			/*
-			animation: to-full-size 1s ease-out running;
-			--webkit-animation: to-full-size 1s ease-out running;
-			*/
-			-webkit-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-				   -moz-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-				     -o-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-				        transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-
-			-webkit-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			   -moz-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			     -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			        transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
-		}
 	</style>
 	<template>
 		<div id="zooming-image">
 			<div id="zoom-image-container">
 				<img id='thumbnail' src="{{ src }}">
-				<img id='fullsize' style="display: none;">
-				<paper-icon-button icon="zoom-in" on-click="_handleButtonClick" style="position:absolute;z-index:11;right:8px;bottom:8px; color: white"></paper-icon-button>
+				<img id='fullsize'>
 			</div>
+			<paper-icon-button icon="zoom-in" on-click="_handleMagnifyingGlassClick" style="position:absolute;z-index:11;right:8px;bottom:8px; color: white"></paper-icon-button>
 			<div id="zoom-image-background"></div>
 		</div>
 	</template>
@@ -110,6 +100,26 @@
 		keyBindings: {
 			'esc': '_handleEscapeKey'
 		},
+		ready: function() {
+
+			// DOM OBJECTS
+			this.fullsize = this.$['fullsize'];
+			this.thumbnail = this.$['thumbnail'];
+			this.zoom_container = this.$['zoom-image-container'];
+			this.default_width = 0;
+
+			var self = this;
+			this.thumbnail.onload = function() { 
+
+				self.default_width = self.zoom_container.offsetWidth;
+
+				self.zoom_container.style.width = self.zoom_container.offsetWidth + "px";
+				self.zoom_container.style.height = self.zoom_container.offsetHeight + "px";
+
+			}
+
+			this.thumbnail.src = this.src;
+  		},
 
 		/* Using IronA11yKeysBehavior, listen for 'esc' key pressed
 		 * anywhere on the page (see keyEventTarget property). 
@@ -119,21 +129,69 @@
 			this.zoomed = false;
 		},
 
-		/* Support users clicking on the small image to get the big one,
-		 * and the big one to hide it and go back to the small one.
-		 */
+		/* 	Click Listener
+			Support users clicking on the small image to get the big one,
+			and the big one to hide it and go back to the small one.
+		================================================== */
 		_clickListener: function(e) {
-			console.log("CLICK");
-			//this.zoomed = (e.target.id == 'zoom-image-container');
+
+			// Set zoomed state to true or false
 			this.zoomed = (e.target.id == 'thumbnail');
-			console.log(this.zoomed);
-			console.log(e.target.id);
-			console.log(this.$['zoom-image-background'])
+
 		},
 
-		_handleButtonClick: function(e) {
+		/* WHEN ZOOM VALUE CHANGES
+		================================================== */
+		_zoomedStateChange: function() {
+			if (this.zoomed) {
+				this._zoomIn()
+			} else {
+				this._zoomOut();
+			}
+		},
+
+		// Working around the built in functionality of the material button
+		_handleMagnifyingGlassClick: function(e) {
 			this.zoomed = true;
 			e.stopPropagation();
+		},
+
+		/* HIDE AND SHOW
+		================================================== */
+		_zoomIn: function() {
+			console.log("_zoomIn");
+			//this.fullsize.style.display = "block";
+			//this.zoom_container.classList.add('container-zoomed');
+			var margin = 20;
+
+			var self = this;
+			this.fullsize.onload = function() { 
+				self.fullsize.style.display = "block";
+			}
+
+			this.fullsize.src = this.fullSrc;
+			this.zoom_container.style.width = window.innerWidth - (margin*2) + "px";
+
+			// Calculate Position
+			var position = this.zoom_container.getBoundingClientRect();
+
+			console.log(position.left - margin);
+			
+			this.zoom_container.style.left = -(position.left - margin) + "px";
+			this.zoom_container.style.top = -(position.top - margin) + "px";
+			//this.zoom_container.style.top = "0px";
+			//this.zoom_container.classList.add('container-zoomed');
+		},
+
+		_zoomOut: function() {
+			console.log("_zoomOut");
+			if (this.zoom_container) {
+				this.zoom_container.classList.remove('container-zoomed');
+				this.zoom_container.style.width = this.default_width + "px";
+				this.zoom_container.style.left = "0px";
+				this.zoom_container.style.top = "0px";
+				this.fullsize.style.display = "none";
+			}
 		},
 
 		/* HIDE AND SHOW
@@ -175,16 +233,7 @@
 			console.log(zoomed);
 		},
 
-		/* WHEN CLICKED EVENT
-		================================================== */
-		_zoomedObserver: function() {
-			console.log("zoomObserver")
-			if (this.zoomed) {
-				this._showFullSized()
-			} else {
-				this._hideFullSized();
-			}
-		},
+		
 
 		/* PROPERTIES
 		================================================== */
@@ -200,7 +249,7 @@
 			zoomed: {
 				type: Boolean,
 				value: false,
-				observer: '_zoomedObserver'
+				observer: '_zoomedStateChange'
 			},
 			keyEventTarget: { // IronA11yKeysBehavior - listen for esc anywhere on page
 				type: Object,
