--- a/app/elements/learn/zooming-image.html
+++ b/app/elements/learn/zooming-image.html
@@ -20,34 +20,6 @@
 			top:0;
 			left:0;
 			background-color:#000;
-			-webkit-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			   -moz-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			     -o-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			        transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
-
-			-webkit-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			   -moz-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			     -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
-			        transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
-		};
-
-		::content #zoom-image-container.container-zoomed {
-			position: absolute;
-		};
-
-		::content #zoom-image-background {
-			background-color: #FFF;
-			width:100%;
-			height:100%;
-			position:fixed;
-			top:0;
-			left:0;
-
-			opacity:0;
-			display:none;
-		}
-
-		::content #zoom-image-background, ::content #fullsize, ::content #zoom-image-container {
 /*			-webkit-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
 			   -moz-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
 			     -o-transition: all 1000ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
@@ -59,9 +31,58 @@
 			        transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);*/
 		};
 
+		::content #zoom-image-container.container-zoomed {
+			
+			z-index:1001;
+		};
+
+		::content #zoom-image-background {
+			background-color: #FFF;
+			width:100%;
+			height:100%;
+			position:fixed;
+			top:0;
+			left:0;
+
+			
+			display:none;
+			z-index: 999;
+			opacity:0.0;
+			-webkit-transition: opacity 500ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			   -moz-transition: opacity 500ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			     -o-transition: opacity 500ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			        transition: opacity 500ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+
+			-webkit-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			   -moz-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			     -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			        transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);
+		}
+
+
+		::content #zoom-image-container {
+			-webkit-transition: all 250ms ease-in-out; 
+			   -moz-transition: all 250ms ease-in-out; 
+			     -o-transition: all 250ms ease-in-out; 
+			        transition: all 250ms ease-in-out;
+
+/*			-webkit-transition: all 500ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			   -moz-transition: all 500ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			     -o-transition: all 500ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			        transition: all 500ms cubic-bezier(0.770, 0.000, 0.175, 1.000);
+
+			-webkit-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			   -moz-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			     -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
+			        transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);*/
+		};
+
 		::content #thumbnail {
 			width: 100%;
-
+			position:relative;
+			top:0;
+			left:0;
+			z-index:1;
 		};
 
 		::content #fullsize {
@@ -72,7 +93,7 @@
 			top: 0;
 			left: 0;
 			width: 100%;
-			z-index: 20;
+			z-index: 1000;
 			overflow:hidden;
 			display: none;
 		};
@@ -106,6 +127,7 @@
 			this.fullsize = this.$['fullsize'];
 			this.thumbnail = this.$['thumbnail'];
 			this.zoom_container = this.$['zoom-image-container'];
+			this.background = this.$['zoom-image-background'];
 			this.default_width = 0;
 
 			var self = this;
@@ -113,12 +135,27 @@
 
 				self.default_width = self.zoom_container.offsetWidth;
 
+				// Set sizes
+				self.style.width = self.zoom_container.offsetWidth + "px";
+				self.style.height = self.zoom_container.offsetHeight + "px";
+
 				self.zoom_container.style.width = self.zoom_container.offsetWidth + "px";
 				self.zoom_container.style.height = self.zoom_container.offsetHeight + "px";
+
+				self.thumbnail.style.position = "absolute";
 
 			}
 
 			this.thumbnail.src = this.src;
+
+			// TRANSITION LISTENERS
+			this.background.addEventListener("transitionend",function(e){
+				self._onBackgroundTransition();
+			},false);
+
+			this.background.addEventListener("webkitTransitionEnd",function(e){
+				self._onBackgroundTransition();
+			},false);
   		},
 
 		/* Using IronA11yKeysBehavior, listen for 'esc' key pressed
@@ -137,6 +174,15 @@
 
 			// Set zoomed state to true or false
 			this.zoomed = (e.target.id == 'thumbnail');
+
+		},
+
+		/* WHEN TRANSITION ENDS
+		================================================== */
+		_onBackgroundTransition: function(e) {
+			console.log("transitionend");
+			this.background.style.display = "none";
+			this.zoom_container.classList.remove('container-zoomed');
 
 		},
 
@@ -161,7 +207,8 @@
 		_zoomIn: function() {
 			console.log("_zoomIn");
 			//this.fullsize.style.display = "block";
-			//this.zoom_container.classList.add('container-zoomed');
+			this.zoom_container.classList.add('container-zoomed');
+
 			var margin = 20;
 
 			var self = this;
@@ -170,70 +217,35 @@
 			}
 
 			this.fullsize.src = this.fullSrc;
-			this.zoom_container.style.width = window.innerWidth - (margin*2) + "px";
+			
 
 			// Calculate Position
 			var position = this.zoom_container.getBoundingClientRect();
-
 			console.log(position.left - margin);
 			
 			this.zoom_container.style.left = -(position.left - margin) + "px";
 			this.zoom_container.style.top = -(position.top - margin) + "px";
-			//this.zoom_container.style.top = "0px";
-			//this.zoom_container.classList.add('container-zoomed');
+
+			this.zoom_container.style.width = window.innerWidth - (margin*2) + "px";
+			
+			this.background.style.display = "block";
+			this.background.style.opacity = "0.8";
+
+			
 		},
 
 		_zoomOut: function() {
 			console.log("_zoomOut");
 			if (this.zoom_container) {
-				this.zoom_container.classList.remove('container-zoomed');
+				
 				this.zoom_container.style.width = this.default_width + "px";
 				this.zoom_container.style.left = "0px";
 				this.zoom_container.style.top = "0px";
 				this.fullsize.style.display = "none";
+
+				this.background.style.opacity = "0";
 			}
 		},
-
-		/* HIDE AND SHOW
-		================================================== */
-		_showFullSized: function() {
-			console.log("show full sized");
-
-			var zoomed = this.$['fullsize'];
-			zoomed.style.display = "block";
-			var background = this.$['zoom-image-background'];
-			//console.log(background);
-			
-			if (zoomed.src) {
-				//zoomed.classList.add('zoomed');
-				zoomed.style.width = "200px";
-				zoomed.style.height = "200px";
-
-				// var background = this.$['zoom-image-background'];
-				// console.log(background);
-				// window.foo = this;
-
-				background.style.display = "block";
-				background.style.opacity = 0;
-				background.style.opacity = 0.8;
-			} else { // lazy load big images
-				var self = this;
-				zoomed.onload = function() { 
-					self._showFullSized();
-				}
-				zoomed.src = this.fullSrc;
-			}
-		},
-
-		_hideFullSized: function() {
-			console.log("hide");
-			console.log(this.id)
-			var zoomed = (this.id == 'fullsize') ? this : this.$['fullsize'];
-			zoomed.classList.remove('zoomed');
-			console.log(zoomed);
-		},
-
-		
 
 		/* PROPERTIES
 		================================================== */
