--- a/app/elements/learn/zooming-image.html
+++ b/app/elements/learn/zooming-image.html
@@ -30,7 +30,39 @@
 			     -o-transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000); 
 			        transition-timing-function: cubic-bezier(0.770, 0.000, 0.175, 1.000);*/
 		};
+		.material-shadow {
+		  transition:box-shadow 0.28s cubic-bezier(0.4, 0, 0.2, 1);
+		}
 
+		.material-shadow[elevation="1"] {
+		  box-shadow:0 2px 2px 0 rgba(0, 0, 0, 0.14),
+		                  0 1px 5px 0 rgba(0, 0, 0, 0.12),
+		                  0 3px 1px -2px rgba(0, 0, 0, 0.2);
+		}
+
+		.material-shadow[elevation="2"] {
+		  box-shadow:0 4px 5px 0 rgba(0, 0, 0, 0.14),
+		                  0 1px 10px 0 rgba(0, 0, 0, 0.12),
+		                  0 2px 4px -1px rgba(0, 0, 0, 0.4);
+		}
+
+		.material-shadow[elevation="3"] {
+		  box-shadow:0 6px 10px 0 rgba(0, 0, 0, 0.14),
+		                  0 1px 18px 0 rgba(0, 0, 0, 0.12),
+		                  0 3px 5px -1px rgba(0, 0, 0, 0.4);
+		}
+
+		.material-shadow[elevation="4"] {
+		  box-shadow:0 8px 10px 1px rgba(0, 0, 0, 0.14),
+		                  0 3px 14px 2px rgba(0, 0, 0, 0.12),
+		                  0 5px 5px -3px rgba(0, 0, 0, 0.4);
+		}
+
+		.material-shadow[elevation="5"] {
+		  box-shadow:0 16px 24px 2px rgba(0, 0, 0, 0.14),
+		                  0  6px 30px 5px rgba(0, 0, 0, 0.12),
+		                  0  8px 10px -5px rgba(0, 0, 0, 0.4);
+		}
 		::content #zoom-image-container.container-zoomed {
 			
 			z-index:1001;
@@ -46,7 +78,7 @@
 
 			
 			display:none;
-			z-index: 999;
+			z-index: 998;
 			opacity:0.0;
 			-webkit-transition: opacity 500ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
 			   -moz-transition: opacity 500ms cubic-bezier(0.770, 0.000, 0.175, 1.000); 
@@ -93,7 +125,7 @@
 			top: 0;
 			left: 0;
 			width: 100%;
-			z-index: 1000;
+			z-index: 999;
 			overflow:hidden;
 			display: none;
 		};
@@ -101,14 +133,18 @@
 
 	</style>
 	<template>
+
 		<div id="zooming-image">
 			<div id="zoom-image-container">
-				<img id='thumbnail' src="{{ src }}">
+				
+				<img id='thumbnail' class="material-shadow" elevation="1" src="{{ src }}">
+
 				<img id='fullsize'>
 			</div>
 			<paper-icon-button icon="zoom-in" on-click="_handleMagnifyingGlassClick" style="position:absolute;z-index:11;right:8px;bottom:8px; color: white"></paper-icon-button>
 			<div id="zoom-image-background"></div>
 		</div>
+
 	</template>
 </dom-module>
 <script>
@@ -228,8 +264,10 @@
 
 			this.zoom_container.style.width = window.innerWidth - (margin*2) + "px";
 			
-			this.background.style.display = "block";
+			//this.background.style.display = "block";
 			this.background.style.opacity = "0.8";
+
+			this.thumbnail.getAttributeNode("elevation").value = "5";
 
 			
 		},
@@ -244,6 +282,9 @@
 				this.fullsize.style.display = "none";
 
 				this.background.style.opacity = "0";
+
+				this.thumbnail.getAttributeNode("elevation").value = "1";
+				this.zoom_container.classList.remove('container-zoomed');
 			}
 		},
 
