dead simple experiment with behaviors

--- a/app/elements/learn/elements.html
+++ b/app/elements/learn/elements.html
@@ -1,3 +1,4 @@
+<link rel="import" href="behaviors.html">
 <link rel="import" href="step-block.html">
 <link rel="import" href="lesson-block.html">
 <link rel="import" href="zooming-image.html">
