--- a/app/lesson.html
+++ b/app/lesson.html
@@ -29,9 +29,21 @@
 					You'll need to get started
 				</h2>
 				<div class="horizontal layout">
+					<z-capsule image="images/learn/ftp-program.png" title="FTP Program">
+						<p>
+							A text editor is a type of program used for editing plain text files.
+							Text editors are provided with operating systems and software development packages, and can be used to change configuration files, documentation files and programming language source code.
+						</p>
+					</z-capsule>
+					<z-capsule image="images/learn/ftp-program.png" title="FTP Program">
+						<p>
+							A text editor is a type of program used for editing plain text files.
+							Text editors are provided with operating systems and software development packages, and can be used to change configuration files, documentation files and programming language source code.
+						</p>
+					</z-capsule>
 					<capsule-unit image="images/learn/text-editor.png" title="Text Editor">
-						A text editor is a type of program used for editing plain text files.
-	          Text editors are provided with operating systems and software development packages, and can be used to change configuration files, documentation files and programming language source code
+						<p>A text editor is a type of program used for editing plain text files.
+	          Text editors are provided with operating systems and software development packages, and can be used to change configuration files, documentation files and programming language source code</p>
 						<link-ref image="images/learn/text-editor.png" title="Sublime Text" link="http://www.sublimetext.com/"></link-ref>
 						<link-ref image="images/learn/text-editor.png" title="Notepad++" link="https://notepad-plus-plus.org/"></link-ref>
 						<link-ref image="images/learn/text-editor.png" title="Atom" link="https://atom.io/"></link-ref>
