--- a/app/elements/learn/elements.html
+++ b/app/elements/learn/elements.html
@@ -9,3 +9,4 @@
 <link rel="import" href="narrative-text.html">
 <link rel="import" href="link-ref.html">
 <link rel="import" href="code-block.html">
+<link rel="import" href="capsule.html">
