some experiments with CSS variables. Working OK, but @apply mixins still elusive

--- a/app/elements/learn/elements.html
+++ b/app/elements/learn/elements.html
@@ -1,3 +1,4 @@
+<link rel="import" href="styles.html">
 <link rel="import" href="behaviors.html">
 <link rel="import" href="step-block.html">
 <link rel="import" href="lesson-block.html">
