--- a/app/elements/learn/learn-nav.html
+++ b/app/elements/learn/learn-nav.html
@@ -16,11 +16,14 @@ Example:
 <dom-module id="learn-nav">
     <style>
 
+        ::content {
+        }
+
         #navigation {
             background-color: #263238;
             padding: 10px;
-            color: #80CBC4;
-            font-family: Roboto;
+            color: var(--learn-primary-color);
+            font-family: var(--learn-primary-font);
             font-weight: 500;
             font-style: italic;
             font-size: 24px;
@@ -38,13 +41,20 @@ Example:
             <div id="navigation">
             <!-- TK: hamburger menu? -->
             Learn
-            <a id="kl-link" href="http://knightlab.northwestern.edu"><img src="/images/learn/banner-logo-white.png"></a>
+            <a id="kl-link" href="http://knightlab.northwestern.edu"><img src="{{ logo }}"></a>
         </div>
     
     </template>
 </dom-module>
 <script type="text/javascript">
     Polymer({
-        is: "learn-nav"
+        is: "learn-nav",
+        properties: {
+            logo: {
+                type: String,
+                value: '/images/learn/banner-logo-white.png'
+            }
+
+        }
     })
 </script>
