add learn-secondary-color to styles

--- a/app/elements/learn/code-block.html
+++ b/app/elements/learn/code-block.html
@@ -16,7 +16,7 @@ Example:
 <dom-module id="code-block">
   <style>
   ::content paper-material.code-block {
-    background-color: #FFF7E8;
+    background-color: var(--learn-secondary-color);
 
 
 
