--- a/app/elements/learn/lesson-block.html
+++ b/app/elements/learn/lesson-block.html
@@ -14,7 +14,7 @@ Example:
 <dom-module id="lesson-block">
   <style>
   ::content paper-material.lesson-block {
-    background-color: #FFF7E8;
+    background-color: var(--learn-secondary-color);
 
 
   }
