--- a/app/elements/learn/styles.html
+++ b/app/elements/learn/styles.html
@@ -3,11 +3,8 @@
     /* https://www.polymer-project.org/1.0/docs/devguide/styling.html */
     :root {
         --learn-primary-color: var(--paper-teal-200);
+        --learn-secondary-color: #FFF7E8;
         --learn-primary-font: "Roboto";
-        --learn-theme: {
-            color:var(--paper-teal-200);
-            font-family: "Arial"
-        }
     }
 
 </style>
