move info icon to a css rule/variable

--- a/app/elements/learn/info-block.html
+++ b/app/elements/learn/info-block.html
@@ -36,6 +36,11 @@ Example:
     align-items: center;
     justify-content: center;
     margin-bottom:50px;
+    background-image: var(--info-icon-url);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 112px;
+    height: 112px;
   }
 
 
@@ -44,7 +49,7 @@ Example:
   <paper-material elevation="0" class="paper-font-body2">
     <div id="info-block-wrapper" class="layout horizontal">
       <div id="info-block-img" class="flex">
-        <img src="{{ image }}">
+        
       </div>
       <div id="info-block-content" class="flex-3">
         <content></content>
