--- a/app/elements/learn/styles.html
+++ b/app/elements/learn/styles.html
@@ -5,6 +5,7 @@
         --learn-primary-color: var(--paper-teal-200);
         --learn-secondary-color: #FFF7E8;
         --learn-primary-font: "Roboto";
+        --info-icon-url: url("/images/learn/info-icon.png");
     }
 
 </style>
